# DenseCRF

./: .gitignore  CMakeLists.txt  README.md
data/: 2_14_s.c_unary  cv-results.txt
examples/: CMakeLists.txt  color_to_label.cpp  color_to_label.hpp  file_storage.cpp  file_storage.hpp  inference.cpp
include/: densecrf.h  densecrf_utils.h  labelcompatibility.h  pairwise.h  permutohedral.h
src/: CMakeLists.txt  densecrf.cpp  densecrf_utils.cpp  labelcompatibility.cpp  pairwise.cpp  permutohedral.cpp
